# time_series_all_in_one

./: .gitignore  ALL_RESULT_deepar_ett_h2.pkl  ALL_RESULT_deepar_ett_m1.pkl  ALL_RESULT_deepar_m3_monthly.pkl  ALL_RESULT_deepar_m3_monthly_normalized_mse.pkl  ALL_RESULT_deepar_m3_quarterly.pkl  ALL_RESULT_deepar_m3_quarterly_normalized_mse.pkl  ALL_RESULT_deepar_m3_yearly.pkl  ALL_RESULT_deepar_m3_yearly_normalized_mse.pkl  ALL_RESULT_deepar_tourism_193.pkl  ALL_RESULT_ett_h1.pkl  ALL_RESULT_ett_h2.pkl  ALL_RESULT_ett_m1.pkl  ALL_RESULT_ett_m2.pkl  ALL_RESULT_informer_ett_h2.pkl  ALL_RESULT_informer_ett_m1.pkl  ALL_RESULT_informer_m3_monthly.pkl  ALL_RESULT_informer_m3_monthly_normalized_mse.pkl  ALL_RESULT_informer_m3_quarterly.pkl  ALL_RESULT_informer_m3_quarterly_normalized_mse.pkl  ALL_RESULT_informer_m3_yearly.pkl  ALL_RESULT_informer_m3_yearly_normalized_mse.pkl  ALL_RESULT_informer_tourism.pkl  ALL_RESULT_informer_tourism_193.pkl  ALL_RESULT_informer_tourism_193_v2.pkl  ALL_RESULT_itransformer_ett_h2.pkl  ALL_RESULT_itransformer_ett_m1.pkl  ALL_RESULT_itransformer_m3_monthly.pkl  ALL_RESULT_itransformer_m3_monthly_normalized_mse.pkl  ALL_RESULT_itransformer_m3_quarterly.pkl  ALL_RESULT_itransformer_m3_quarterly_normalized_mse.pkl  ALL_RESULT_itransformer_m3_yearly.pkl  ALL_RESULT_itransformer_m3_yearly_normalized_mse.pkl  ALL_RESULT_itransformer_tourism.pkl  ALL_RESULT_itransformer_tourism_193.pkl  ALL_RESULT_m3_monthly.pkl  ALL_RESULT_m3_quarterly.pkl  ALL_RESULT_m3_yearly.pkl  ALL_RESULT_nbeats_ett_h2.pkl  ALL_RESULT_nbeats_ett_m1.pkl  (+64 more)
sil/: ALL_RESULT_ett_h1.pkl  ALL_RESULT_ett_h2.pkl  ALL_RESULT_ett_m1.pkl  ALL_RESULT_ett_m2.pkl
