[project]
name = "time-series-project"
version = "0.1.0"
description = "Time series forecasting experiments for the Delhi climate dataset."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "catboost",
    "ipykernel",
    "jupyter",
    "lightgbm",
    "matplotlib",
    "neuralforecast",
    "numpy",
    "pandas",
    "scikit-learn",
    "statsmodels",
    "tensorflow",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "xgboost",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = [{ index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
torchvision = [{ index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]


[[tool.uv.index]]
name = "databoss_pypi"
url = "https://hub.databoss.com.tr/repository/pypi-group/simple/"
default = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
